@@ -144,16 +144,14 @@ public class MeshPart {
 		return equals((MeshPart)arg0);
 	}
 
-	/** Renders the mesh part using the specified shader, must be called in between {@link ShaderProgram#begin()} and
-	 * {@link ShaderProgram#end()}.
+	/** Renders the mesh part using the specified shader, must be called after {@link ShaderProgram#bind()}.
 	 * @param shader the shader to be used
 	 * @param autoBind overrides the autoBind member of the Mesh */
 	public void render (ShaderProgram shader, boolean autoBind) {
 		mesh.render(shader, primitiveType, offset, size, autoBind);
 	}
 
-	/** Renders the mesh part using the specified shader, must be called in between {@link ShaderProgram#begin()} and
-	 * {@link ShaderProgram#end()}.
+	/** Renders the mesh part using the specified shader, must be called after {@link ShaderProgram#bind()}.
 	 * @param shader the shader to be used */
 	public void render (ShaderProgram shader) {
 		mesh.render(shader, primitiveType, offset, size);
