@@ -44,15 +44,11 @@ import com.badlogic.gdx.utils.ObjectMap;
  * 
  * <p>
  * After construction a ShaderProgram can be used to draw {@link Mesh}. To make the GPU use a specific ShaderProgram the programs
- * {@link ShaderProgram#begin()} method must be used which effectively binds the program.
+ * {@link ShaderProgram#bind()} method must be used which effectively binds the program.
  * </p>
  * 
  * <p>
  * When a ShaderProgram is bound one can set uniforms, vertex attributes and attributes as needed via the respective methods.
- * </p>
- * 
- * <p>
- * A ShaderProgram can be unbound with a call to {@link ShaderProgram#end()}
  * </p>
  * 
  * <p>
@@ -686,19 +682,21 @@ public class ShaderProgram implements Disposable {
 		gl.glVertexAttribPointer(location, size, type, normalize, stride, offset);
 	}
 
-	/** Makes OpenGL ES 2.0 use this vertex and fragment shader pair. When you are done with this shader you have to call
-	 * {@link ShaderProgram#end()}. */
+	/** @deprecated use {@link #bind()} instead, this method will be remove in future version */
+	@Deprecated
 	public void begin () {
+		bind();
+	}
+
+	public void bind(){
 		GL20 gl = Gdx.gl20;
 		checkManaged();
 		gl.glUseProgram(program);
 	}
 
-	/** Disables this shader. Must be called when one is done with the shader. Don't mix it with dispose, that will release the
-	 * shader resources. */
+	/** @deprecated no longer necessary, this method will be remove in future version */
+	@Deprecated
 	public void end () {
-		GL20 gl = Gdx.gl20;
-		gl.glUseProgram(0);
 	}
 
 	/** Disposes all resources associated with this shader. Must be called when the shader is no longer used. */
