@@ -112,29 +112,26 @@ public class FloatTextureTest extends GdxTest {
 		Gdx.gl20.glClear(GL20.GL_COLOR_BUFFER_BIT);
 
 		fb.begin();
-		fbshader.begin();
+		fbshader.bind();
 		fbshader.setUniformf("u_viewport", fb.getWidth(), fb.getHeight());
 		fbshader.setUniformf("u_color", 0.0f, 1.0f, 0.0f);
 		quad.render(fbshader, GL20.GL_TRIANGLES);
-		fbshader.end();
 		fb.end();
 
 		ffb.begin();
-		fbshader.begin();
+		fbshader.bind();
 		fbshader.setUniformf("u_viewport", ffb.getWidth(), ffb.getHeight());
 		fbshader.setUniformf("u_color", 1.0f, 0.0f, 0.0f);
 		quad.render(fbshader, GL20.GL_TRIANGLES);
-		fbshader.end();
 		ffb.end();
 
-		shader.begin();
+		shader.bind();
 		fb.getColorBufferTexture().bind(0);
 		ffb.getColorBufferTexture().bind(1);
 		shader.setUniformMatrix("u_worldView", screenCamera.combined);
 		shader.setUniformi("u_fbtex", 0);
 		shader.setUniformi("u_ffbtex", 1);
 		screenQuad.render(shader, GL20.GL_TRIANGLES);
-		shader.end();
 	}
 
 	private void createQuad () {
