@@ -122,11 +122,10 @@ public class MipMapTest extends GdxTest {
 		currTexture.bind();
 		currTexture.setFilter(TextureFilter.valueOf(minFilter.getSelected()), TextureFilter.valueOf(magFilter.getSelected()));
 
-		shader.begin();
+		shader.bind();
 		shader.setUniformMatrix("u_projTrans", camera.combined);
 		shader.setUniformi("s_texture", 0);
 		mesh.render(shader, GL20.GL_TRIANGLE_FAN);
-		shader.end();
 
 		ui.act();
 		ui.draw();
